--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
+    "redux-form-material-ui": "^4.3.4",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
