--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.3",
     "axios": "^0.19.0",
+    "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
+    "react-tap-event-plugin": "^3.0.3",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-form-material-ui": "^4.3.4",
