--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-geolocated": "^2.5.1",
+    "react-geolocation": "^1.0.4",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
     "react-tap-event-plugin": "^3.0.3",
