--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^4.3.3",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-geolocated": "^2.5.1",
     "react-geolocation": "^1.0.4",
