--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.3.3",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "material-ui": "^0.20.2",
@@ -14,6 +15,7 @@
     "react-geolocation": "^1.0.4",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.4",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
