--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
+    "contentful": "^7.9.1",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.9.0",
     "react-geolocated": "^2.5.1",
     "react-geolocation": "^1.0.4",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.4",
