--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "contentful": "^7.9.1",
+    "dotenv": "^8.1.0",
+    "env-cmd": "^10.0.1",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
@@ -27,9 +29,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "  react-scripts start",
+    "build": " react-scripts build ",
+    "test": ".env react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
